# media-files-organizer

./: .gitignore  .pylintrc  README.md  foo.txt  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
database/: pt_database.schema.sql  pt_db.sqlite3
media_files_organizer/: cli.py  db_connector.py  fileinfo.py  foo.py  metadata_types.py  nfo_generator.py  popdb.py  pt_scrapper.py  ptdub_metadata.py  tmdb_metadata.py
media_files_organizer/rich_ext/: panel_input.py
media_files_organizer/templates/: tv_show_episode.xml.jinja  tv_show_season.xml.jinja
tests/: flora_miranda_bio.txt  test_fileinfo.py  test_nfo_generator.py  test_pt_scrapper.py  test_ptdub_metadata.py  test_tmdb_metadata.py
tests/mocks/: mock_video.mkv  pt_scrapper.all_info.flora_miranda.html  pt_scrapper.missing_bio.isabel_nunes.html  tv_cast.json  tv_episode_1.json  tv_general_info.json  tv_season_info.json
tests/mocks/seasons/: pt_scrapper.cinderela.html  pt_scrapper.evangelion.html  pt_scrapper.fala_animais.html  pt_scrapper.pokemon_sol_e_lua_pt_dobragens.html  pt_scrapper.pokemon_xy.html
typings/: pymediainfo.pyi
